# opentelemetry-cpp

./: CMakeLists.txt  CMakeSettings.json  vcpkg-configuration.json  vcpkg.json
api/: CMakeLists.txt
api/include/opentelemetry/: export.h
api/include/opentelemetry/baggage/: baggage.cc  baggage.h  baggage_context.cc  baggage_context.h
api/include/opentelemetry/baggage/propagation/: baggage_propagator.cc  baggage_propagator.h
api/include/opentelemetry/common/: key_value_iterable.h  key_value_iterable_view.h  kv_properties.cc  kv_properties.h  spin_lock_mutex.h  string_util.h  timestamp.h
api/include/opentelemetry/context/: context.cc  context.h  runtime_context.cc  runtime_context.h
api/include/opentelemetry/context/propagation/: global_propagator.cc  global_propagator.h
api/include/opentelemetry/metrics/: meter.h  meter_provider.h  noop.h  provider.cc  provider.h  sync_instruments.h
api/include/opentelemetry/trace/: default_span.cc  default_span.h  noop.cc  noop.h  provider.cc  provider.h  scope.cc  scope.h  span.cc  span.h  trace_state.cc  trace_state.h  tracer.cc  tracer.h  tracer_provider.cc  tracer_provider.h
api/src/baggage/: baggage.cc
api/src/baggage/propagation/: baggage_propagator.cc
api/src/common/: kv_properties.cc
api/src/context/: runtime_context.cc
api/src/context/propagation/: global_propagator.cc
api/src/trace/: noop.cc  provider.cc  trace_state.cc
cmake/: opentelemetry-proto.cmake  proto-options-patch.cmake
examples/: CMakeLists.txt
examples/common/foo_library/: CMakeLists.txt  foo_library.cc  foo_library.h
examples/foo_library/: CMakeLists.txt  foo_library.cc
examples/foo_library/foo_library/: foo_library.h
examples/grpc/: CMakeLists.txt
examples/multi_processor/: CMakeLists.txt  main.cc
examples/multi_processor/foo_library/: CMakeLists.txt  foo_library.cc
examples/simple/: CMakeLists.txt  main.cc
exporters/etw/: CMakeLists.txt
exporters/memory/: CMakeLists.txt
exporters/ostream/: CMakeLists.txt
exporters/ostream/include/opentelemetry/exporters/ostream/: metrics_exporter.h  span_exporter.h
exporters/otlp/: CMakeLists.txt
exporters/otlp/include/opentelemetry/exporters/otlp/: otlp_grpc_exporter.h  otlp_grpc_log_exporter.h  otlp_http_client.h  otlp_http_exporter.h  otlp_http_log_exporter.h  otlp_log_recordable.h  otlp_recordable.h  otlp_recordable_utils.h
exporters/otlp/src/: otlp_recordable.cc
ext/include/opentelemetry/ext/http/client/: http_client_factory.h
ext/include/opentelemetry/ext/http/client/curl/: http_client_curl.h  http_operation_curl.h
ext/include/opentelemetry/ext/zpages/: tracez_data_aggregator.h  tracez_http_server.h  tracez_processor.h  tracez_shared_data.h
ext/src/dll/: dllmain.cc  input.src  opentelemetry_cpp.src
ext/src/http/client/curl/: CMakeLists.txt  http_client_curl.cc  http_operation_curl.cc
ext/src/zpages/: CMakeLists.txt
sdk/: CMakeLists.txt
sdk/include/opentelemetry/: sdk_export.h
sdk/include/opentelemetry/sdk/metrics/: meter.h  meter_context.h  meter_provider.h  metric_exporter.h  metric_reader.h  recordable.h  view.h
sdk/include/opentelemetry/sdk/resource/: resource.h  resource_detector.h
sdk/include/opentelemetry/sdk/trace/: batch_span_processor.h  exporter.h  id_generator.h  multi_recordable.h  multi_span_processor.h  processor.h  random_id_generator.h  recordable.h  sampler.h  simple_processor.h  span_data.h  tracer.h  tracer_context.h  tracer_provider.h
sdk/include/opentelemetry/sdk/trace/samplers/: parent.h  trace_id_ratio.h
sdk/src/common/: CMakeLists.txt  random.h
sdk/src/common/platform/: fork.h
sdk/src/logs/: CMakeLists.txt
sdk/src/metrics/: CMakeLists.txt
sdk/src/resource/: CMakeLists.txt
sdk/src/trace/: CMakeLists.txt  exporter.cc  id_generator.cc  multi_recordable.cc  multi_span_processor.cc  processor.cc  recordable.cc  sampler.cc  simple_processor.cc  span.cc  span.h  span_data.cc  tracer.cc
sdk/src/version/: CMakeLists.txt
tools/triplets/: x64-windows-custom.cmake  x64-windows-custom2.cmake  x64-windows-v142.cmake
